[package]
name = "obis"
version = "1.0.0"
documentation = "https://docs.rs/obis/1.0.0"
edition = "2015"
authors = ["Simonas Kazlauskas <obis@kazlauskas.me>"]
description = "Work with OBIS codes as defined by the IEC 62056-61 standard"
readme = "README.mkd"
repository = "https://github.com/nagisa/obis"
license = "ISC OR Apache-2.0"
categories = ["no-std::no-alloc", "parser-implementations"]

[dependencies]
atoi = { version = "2.0.0", default-features = false }
